--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,17 +7,14 @@
 /* @keyframes bg-animation {
   to{ background: #b4b2b2}
 } */
+
+body{
+  height: 50vh;
+}
 .reddit-mono-h1{
   font-family: "Reddit Mono", monospace;
   font-optical-sizing: auto;
   font-style: normal;
-  text-align: center;
-}
-
-footer{
-  position: fixed;
-  bottom: 0;
-  width: 100%;
   text-align: center;
 }
 
@@ -26,6 +23,7 @@ footer{
   flex-direction: column;
   justify-content: center;
   height: calc(100vh - 30px);
+  max-height: 700px;
 }
 
 .container-btn{
@@ -73,6 +71,7 @@ h1{
   background: linear-gradient(to top right, rgb(0, 0, 0, .9),rgba(137, 137, 137, 0.7),rgba(225, 223, 223, 0.7));
   background-size: 500%;
   animation: bg-animation 2s linear infinite alternate;
+  max-height: 700px;
 }
 /* body{
   height: 100vh;
@@ -130,6 +129,7 @@ h1{
   height: 85%;
   padding: 1rem;
   border-radius: 1rem;
+  max-height: 700px;
 }
 
 .contact-education{
@@ -201,6 +201,7 @@ h1{
   padding-right: 1rem;
   overflow: auto;
   gap: .5rem;
+  max-height: 700px;
 }
 
 .container-inner-projects div{
@@ -267,5 +268,18 @@ h1{
   .container-btn{
     width: 100%;
     height: 3rem;
+  }
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+@media (min-height: 700px) {
+  footer{
+    bottom:unset ;
   }
 }
