--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -49,6 +49,7 @@ h1{
   transition: .3s;
     color: darkblue;
     font-size: larger;
+    cursor: pointer;
   
 }
 
@@ -89,6 +90,21 @@ h1{
   background-color: white;
   width: 80%;
   height: 80%;
+}
+.container-inner-certificate{
+  z-index: 99;
+  position: relative;
+  display: flex;
+  width: 85%;
+  height: 85%;
+}
+.contact-education span{
+  cursor: pointer;
+  font-weight: larger;
+}
+.container-inner-certificate img{
+  width: 100%;
+  height: 100%;
 }
 
 .container-inner-skills{
@@ -182,6 +198,12 @@ h1{
   position: absolute;
   right: 15px;
   top: 15px;
+  cursor: pointer;
+}
+
+.link{
+  color: blue;
+  text-decoration: underline;
 }
 
 .container-inner-projects{
@@ -213,6 +235,7 @@ h1{
   font-size: large;
   font-weight: 900;
   height: 2rem;
+  cursor: pointer;
 }
 
 .container-inner-projects label:hover{
@@ -247,7 +270,7 @@ footer{
 }
 
 @media (max-width: 800px) {
-  .container-inner-about, .container-inner-projects{
+  .container-inner-about, .container-inner-projects, .container-inner-certificate{
     display: flex;
     flex-direction: column;
     gap: 1rem;
