--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,6 +29,7 @@
   height: 2rem;
   width: 75%;
   align-self:center;
+  gap: 5px;
 }
 
 h3,h4,h5{
@@ -50,12 +51,19 @@ h1{
     color: darkblue;
     font-size: larger;
     cursor: pointer;
-  
+    /* background-color: rgb(169, 169, 169, 0.2); */ 
+}
+.container-btn button:hover{
+    cursor: pointer;
+    background-color: rgb(169, 169, 169, 0.2);
+    border: 3px solid black;
 }
 
 .container-btn button{
-  border: none;
+  margin-top: 5px;
+  border: 2px solid black;
   background-color: rgb(0, 0, 0, 0);
+  border-radius: 5px;
 }
 
 .container-outer{
@@ -303,6 +311,17 @@ footer{
     min-width: 80%;
     bottom: 3px;
   }
+}
+
+.sideBar{
+  width: fit-content;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+}
+svg:hover{
+  width: 55px;
+  height: 55px;
 }
 
 /* @media (min-width: 801px) {
