--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -80,7 +80,7 @@ h1{
   /* max-height: 700px; */
 }
 body{
-  height: 100vh;
+  height: 97vh;
   background: linear-gradient(to top right, rgb(0, 0, 0, .9),rgba(137, 137, 137, 0.7),rgba(225, 223, 223, 0.7));
   background-size: 500%;
   animation: bg-animation 2s linear infinite alternate;
@@ -323,6 +323,45 @@ svg:hover{
   width: 55px;
   height: 55px;
 }
+.container-inner-sidebar{
+  position: fixed;
+  right: 0;
+  width: 0%;
+  height: 100%;
+  background-color: rgb(169,169,169,0.99);
+  animation: sidebar-animation .5s forwards;
+}
+@keyframes sidebar-animation {
+to{ width: 15%}
+}
+
+.sidebar-btn{
+  width: 100%;
+  padding: 1rem;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  height: fit-content;
+}
+.sidebar-btn button{
+  margin-top: 5px;
+  background-color: rgb(0, 0, 0, 0);
+  border-radius: 5px;
+  font-size: larger;
+  width: 80%;
+  border-color: rgb(0, 0, 0); border-style: solid; border-width: 0 0 2px 0;
+}
+
+.sidebar-btn button:hover{
+  transition: .3s;
+  color: blue;
+}
+
+.container-outer-sidebar{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 
 /* @media (min-width: 801px) {
   .container-inner-about, .container-inner-projects{
