--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -96,9 +96,9 @@ h3{
 }
 body{
   height: 100%;
-  background: linear-gradient(to top right, rgb(0, 0, 0, .9),rgba(137, 137, 137, 0.7),rgba(225, 223, 223, 0.7));
-  background-size: 500%;
-  animation: bg-animation 2s linear infinite alternate;
+  background: linear-gradient(rgba(112, 112, 112, 0.9)0% 14%,rgba(232, 232, 232, 0.7)15% 85%,rgba(112, 112, 112, 0.9)86% 100%);
+  /* background-size: 500%;
+  animation: bg-animation 2s linear infinite alternate; */
 } 
 @keyframes bg-animation {
   0%{
@@ -335,10 +335,10 @@ footer{
     width: 100%;
     height: 3rem;
   }
-  footer{
+  /* footer{
     min-width: 80%;
     bottom: 3px;
-  }
+  } */
 }
 
 .sideBar{
