--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -121,6 +121,11 @@ body{
   width: 85%;
   height: 85%;
 }
+.title{
+  font-weight: 900;
+  text-decoration: underline;
+  cursor: text;
+}
 .contact-education span{
   cursor: pointer;
   font-weight: larger;
@@ -171,6 +176,7 @@ body{
 }
 
 .contact-education{
+  overflow: auto;
   background-color: rgb(212, 210, 205);
   grid-area: 1 / 1 / 3 / 2;
   padding: 1rem;
