--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -48,6 +48,10 @@ h3,h4,h5{
   margin-bottom: 0;
 }
 
+h4{
+  font-weight: bolder;
+}
+
 p{
   /* font-weight: 500; */
   margin-bottom: 0;
@@ -57,6 +61,7 @@ p{
 
 h3{
   /* font-weight: 900; */
+  font-size: xx-large;
   font-weight: bolder;
 }
 .container-btn h5:hover{
